testsuite/gnatprove/tests/V726-024__pretty_output/test.out

main.adb:21:04: error: instantiation error at line 12
   12 |         F : access Integer;
      |         ^ here
  component of anonymous access type is not allowed in SPARK
  violation of aspect SPARK_Mode at line 1
    1 |procedure Main with SPARK_Mode is
      |                    ^ here

main.adb:21:04: error: instantiation error at line 15
   15 |      Y : T := (F => X.F'Access);
      |      ^ here
  "T" is not allowed in SPARK (due to component of anonymous access type)
  violation of aspect SPARK_Mode at line 1
    1 |procedure Main with SPARK_Mode is
      |                    ^ here

main.adb:21:04: error: instantiation error at line 17
   17 |      Y.F.all := Y.F.all + 1;
      |                 ^~~~~~~
  "T" is not allowed in SPARK (due to component of anonymous access type)
  violation of aspect SPARK_Mode at line 1
    1 |procedure Main with SPARK_Mode is
      |                    ^ here
gnatprove: error during flow analysis and proof
